repos/emily-python/contents/test/reader/fail/dot.em
# Dot must be followed by symbol or number
# Arg: --ast
# Expect failure

# Tags: broken-meta

.""
